Fix tree alignment

--- a/cwt-angular/src/main/webapp/scss/_tree.scss
+++ b/cwt-angular/src/main/webapp/scss/_tree.scss
@@ -19,11 +19,6 @@
   color: #aaa;
 }
 
-.playoff-spot td a {
-  display: block;
-  padding: 2px 0;
-}
-
 table.playoff-spot {
   margin-bottom: 2px;
   background-color: transparent;
